refactoring and adding comments